Fix text alignment and add border color to divs

--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ img {
   padding: 10px;
 }
 .container div {
-  text-align: center
+  text-align: center;
+  border-colour: green;
 }
 
